<resources>
    <string name="app_name">farmily</string>
    <string name="hello">Hello</string>
    <string name="Zouhaier">Zouhaier </string>
    <string name="search_elements">search_elements</string>
    <string name="ask_our_question">Ask our Question</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact">Contact</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="zouhaier_tounsi">Zouhaier Tounsi</string>
    <string name="question_feed">Question Feed</string>
    <string name="title_activity_profile2">Profile2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiYmFoYTIzIiwiYSI6ImNrZmg1dnl5aTB2YnoyeW91MzVucngxZG4ifQ.ZTGPmjh_u0LEMkAPqOnDWg</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string-array name="numbers">
        <item>Tomato</item>
        <item>Potato</item>
        <item>Eggplant</item>
    </string-array>

</resources>