<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="esprit.tn.farmily.feed">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/head"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/texthello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/hello"
                android:textColor="#ffffff"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/Zouhaier"
                android:textColor="#ffffff"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@id/texthello"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageMenu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="@+id/texthello"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/texthello"
                app:tint="#ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/white_rectangle_background"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageMenu">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    android:background="@null"
                    android:hint="search"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="#363636"
                    android:textSize="10sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="321dp"
                    android:background="@drawable/search_iconbackground"
                    android:contentDescription="@string/app_name"
                    android:padding="6dp"
                    android:src="@drawable/ic_search"


                    />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="false"
                android:layout_marginStart="15dp"
                android:elevation="2dp"
                android:background="@drawable/profile"></ImageView>

            <Button
                android:id="@+id/questions"
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/ask_our_question"
                android:textColor="#363636"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:layout_toEndOf="@+id/profile_pic"
                android:background="@drawable/question"></Button>

        </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/home_feed"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.25"
            android:background="@drawable/home"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_container">

        </Button>

        <Button
            android:id="@+id/message_feed"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/message"
            android:backgroundTint="#636363"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_container">

        </Button>

        <Button
            android:id="@+id/notif_feed"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"

            android:background="@drawable/notification"
            android:backgroundTint="#636363"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_container">

        </Button>

        <Button
            android:id="@+id/profil_feed"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/user"
            android:backgroundTint="#636363"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_container">

        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


