<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".messages">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/messagehead"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/texthello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/hello"
            android:textColor="#ffffff"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/Zouhaier"
            android:textColor="#ffffff"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@id/texthello"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/app_name"

            app:layout_constraintBottom_toBottomOf="@+id/texthello"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/texthello"
            app:tint="#ffffff" />

        <LinearLayout
            android:id="@+id/rech"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_rectangle_background"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/texthello"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="25dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:background="@null"
                android:hint="search"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="#363636"
                android:textSize="10sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="321dp"
                android:background="@drawable/search_iconbackground"
                android:contentDescription="@string/app_name"
                android:padding="6dp"
                android:src="@drawable/ic_search"


                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contacts">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/salah"></ImageView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="22dp"
                android:background="@drawable/walid"></ImageView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="22dp"
                android:background="@drawable/faouzi"></ImageView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="22dp"
                android:background="@drawable/hamed"></ImageView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="14dp"
                android:layout_marginLeft="14dp"
                android:background="@drawable/riadh"></ImageView>

        </LinearLayout>

        <TextView
            android:id="@+id/contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/contact"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rech" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/home_message"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.25"
            android:background="@drawable/home"
            android:backgroundTint="#636363"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_container">

        </Button>

        <Button
            android:id="@+id/message"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/message"
            android:backgroundTint="#619151"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_container">

        </Button>

        <Button
            android:id="@+id/notif_message"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"

            android:background="@drawable/notification"
            android:backgroundTint="#636363"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_container">

        </Button>

        <Button

            android:id="@+id/profil_message"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:elevation="4dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/user"
            android:backgroundTint="#636363"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_container">

        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>